<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/Preg01_resp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resp1"
            android:onClick="onRadioButtonClickedPregun01"/>
        <RadioButton android:id="@+id/Preg01_resp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resp2"
            android:onClick="onRadioButtonClickedPregun01"/>
        <RadioButton android:id="@+id/Preg01_resp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resp3"
            android:onClick="onRadioButtonClickedPregun01"/>
        <RadioButton android:id="@+id/Preg01_resp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resp4"
            android:onClick="onRadioButtonClickedPregun01"/>
        <RadioButton android:id="@+id/Preg01_resp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resp5"
            android:onClick="onRadioButtonClickedPregun01"/>

    </RadioGroup>

</LinearLayout>